# proxy_mistral

./: .env.example  .gitignore  Dockerfile  Makefile  Makefile.prod  README.md  SPEC.md  WEEK2_TESTING.md  WEEKS3-4_DOCUMENTATION.md  WEEKS5-6_DOCUMENTATION.md  pyproject.toml
config/: settings.yaml
config/personas/: default.yaml
docs/: api-guide.md  command.md  decisions.md  implementation-guide.md  usage.md
kubernetes/: deployment.yaml  networkpolicy.yaml
scripts/: setup_voice.py  simulate_meeting.py  test_latency.py  test_setup.py
src/: main.py
src/agent/: brain.py  context_manager.py  summarizer.py  tools.py
src/api/: app.py  models.py
src/config/: settings.py
src/integrations/: google_calendar.py
src/language/: japanese.py
src/meeting/: tunnel_manager.py  ws_server.py
src/meeting/transports/: base.py  meetingbaas.py
src/pipeline/: meeting_pipeline.py
src/pipeline/meeting_processors/: voxtral_stt.py
src/scheduler/: meeting_state.py  scheduler.py
src/security/: __init__.py  audit.py  auth.py  crypto.py  rate_limiter.py  sanitizer.py
tests/: test_basic.py  test_meeting_state.py  test_persona_auto_join.py  test_scheduler.py
