[project]
name = "proxy-mistral"
version = "0.1.0"
description = "Meeting Proxy Agent with Mistral AI"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pipecat-ai[mistral,elevenlabs]>=0.0.100",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "websockets>=11.0",
    "structlog>=23.0",
    "sqlite-utils>=3.30",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "mistralai>=1.0",
    "pyngrok>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]

[tool.black]
line-length = 120
